Quartz config with properties update

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,24 +4,16 @@ info:
 spring:
   application:
     name: api
-  #  quartz:
-  #    # Use the MongoDB store
-  #    org.quartz.jobStore.class: com.novemberain.quartz.mongodb.MongoDBJobStore
-  #    # MongoDB URI (optional if 'org.quartz.jobStore.addresses' is set)
-  #    org.quartz.jobStore.mongoUri: ${rp.mongo.uri}
-  #    # comma separated list of mongodb hosts/replica set seeds (optional if 'org.quartz.jobStore.mongoUri' is set)
-  #    #- org.quartz.jobStore.addresses: host1,host2
-  #    # database name
-  #    org.quartz.jobStore.dbName: reportportal
-  #    # Will be used to create collections like mycol_jobs, mycol_triggers, mycol_calendars, mycol_locks
-  #    org.quartz.jobStore.collectionPrefix: scheduler
-  #    # thread count setting is ignored by the MongoDB store but Quartz requries it
-  #    org.quartz.threadPool.threadCount: "1"
-  #
-  #    org.quartz.jobStore.isClustered: "true"
-  #    org.quartz.jobStore.clusterCheckinInterval: "180000"
-  #    org.quartz.scheduler.instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
-  #    org.quartz.scheduler.instanceName: reportportal
+    quartz:
+      org.quartz.jobStore.class: org.quartz.impl.jdbcjobstore.JobStoreTX
+      org.quartz.jobStore.driverDelegateClass: org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
+      org.quartz.jobStore.dataSource: dataSource
+      org.quartz.jobStore.tablePrefix: quartz.scheduler_
+      org.quartz.threadPool.threadCount: "1"
+      org.quartz.jobStore.isClustered: "true"
+      org.quartz.jobStore.clusterCheckinInterval: "180000"
+      org.quartz.scheduler.instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+      org.quartz.scheduler.instanceName: reportportal
 
   datasource:
     driver-class-name: org.postgresql.Driver
