Multi-thread log removal fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,7 @@ com.ta.reportportal.job.clean.screenshots.cron=PT1H
 #CRON expression for project setting 'keep logs' as every 14 days
 #com.ta.reportportal.job.clean.logs.cron=P14D
 com.ta.reportportal.job.clean.logs.cron=PT1H
+com.ta.reportportal.job.clean.logs.timeout=300
 #Expire account after X days
 rp.auth.expire.account.after=5
 ## EMail Server configuration (temporary solution)
