--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,8 @@ com.ta.reportportal.job.clean.screenshots.cron=PT1H
 #com.ta.reportportal.job.clean.logs.cron=P14D
 com.ta.reportportal.job.clean.logs.cron=PT1H
 com.ta.reportportal.job.clean.logs.timeout=300
+com.ta.reportportal.job.clean.launches.cron=PT1H
+com.ta.reportportal.job.clean.launches.timeout=300
 #Expire account after X days
 rp.auth.expire.account.after=5
 ## EMail Server configuration (temporary solution)
