--- a/build.gradle
+++ b/build.gradle
@@ -141,6 +141,8 @@ dependencies {
     compile 'org.jooq:jooq-meta:3.11.4'
     compile 'org.jasypt:jasypt:1.9.2'
     compile("org.springframework.boot:spring-boot-starter-amqp")
+    // Optional for spring-boot-starter-amqp
+    compile "com.rabbitmq:http-client:2.1.0.RELEASE"
 
     compile 'commons-fileupload:commons-fileupload:1.3.3'
     compile 'commons-validator:commons-validator:1.6'
