some swagger updates

--- a/src/main/resources/application-dev-mac.yaml
+++ b/src/main/resources/application-dev-mac.yaml
@@ -8,5 +8,6 @@ spring:
 rp:
   amqp:
     addresses: amqp://rabbitmq:rabbitmq@localhost:5672
+    api-address: http://rabbitmq:rabbitmq@localhost:15672/api
   db:
     url: jdbc:postgresql://localhost:5432/reportportal?user=rpuser&password=rppass
