--- a/src/main/resources/application-dev-win.yaml
+++ b/src/main/resources/application-dev-win.yaml
@@ -12,4 +12,7 @@ rp:
   db:
     url: jdbc:postgresql://localhost:5432/reportportal?user=rpuser&password=rppass
   amqp:
-    url: amqp://rabbitmq:rabbitmq@localhost:5672
+    addresses: amqp://guest:guest@localhost:5672
+    api-address: http://guest:guest@localhost:15672/api
+  plugins:
+    path: plugins
