--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,4 +70,4 @@ logging.level.org.hibernate.SQL=debug
 #logging.level.org.hibernate.type.descriptor.sql=trace
 #logging.level.org.springframework.orm.jpa=debug
 #logging.level.org.springframework.transaction=trace
-spring.profiles.active=consul, dev-mac
+spring.profiles.active=consul, dev-win
