--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,7 +45,7 @@ rp.cache.user.expiration=60
 com.ta.reportportal.job.interrupt.broken.launches.cron=PT1H
 #CRON expression for project setting 'keep screenshots' as every 7 days
 #com.ta.reportportal.job.clean.screenshots.cron=P7D
-com.ta.reportportal.job.clean.screenshots.cron=PT5S
+com.ta.reportportal.job.clean.screenshots.cron=PT1H
 #CRON expression for project setting 'keep logs' as every 14 days
 #com.ta.reportportal.job.clean.logs.cron=P14D
 com.ta.reportportal.job.clean.logs.cron=PT1H
