data store properties backup

--- a/src/main/resources/datastore.properties
+++ b/src/main/resources/datastore.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-datastore.default.path=${rp.binarystore.path:users/yumfriez/data/storage}
+datastore.default.path=${rp.binarystore.path:/data/storage}
 datastore.seaweed.master.host=${rp.binarystore.master.host:localhost}
 datastore.seaweed.master.port=${rp.binarystore.master.port:9333}
 # could be one of [seaweed, filesystem]
