--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,7 +65,7 @@ rp.email.debug=false
 rp.email.account=
 rp.email.password=
 #show sql statement
-logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.SQL=info
 #show sql values
 #logging.level.org.hibernate.type.descriptor.sql=trace
 #logging.level.org.springframework.orm.jpa=debug
