application.yaml back-up

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -55,7 +55,7 @@ rp:
     addresses: amqp://rabbitmq:rabbitmq@rabbitmq:5672
     api-address: http://rabbitmq:rabbitmq@rabbitmq:15672/api
   db:
-    url: jdbc:postgresql://localhost:5432/reportportal?user=rpuser&password=rppass
+    url: jdbc:postgresql://postgres:5432/reportportal?user=rpuser&password=rppass
   upload:
     maxUploadSize: 128MB
     maxFileSize: 64MB
