--- a/build.gradle
+++ b/build.gradle
@@ -115,7 +115,7 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:4.0.0'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile 'com.github.reportportal:commons-dao:a1c9390'
+        compile 'com.github.reportportal:commons-dao:1061b40'
         compile 'com.github.reportportal:commons-rules:4cd20af'
         compile 'com.github.reportportal:commons-model:6b603ea8'
         compile('com.github.reportportal:commons:71d4aca')
@@ -272,11 +272,11 @@ test {
         reports {
             xml.enabled true
         }
-//        afterEvaluate {
-//            classDirectories = files(classDirectories.files.collect {
-//                fileTree(dir: it, exclude: ['**/entity/**', '**/aop/**', '**/jasper/**', '**/configs/**'])
-//            })
-//        }
+        afterEvaluate {
+            classDirectories = files(classDirectories.files.collect {
+                fileTree(dir: it, exclude: ['**/entity/**', '**/aop/**', '**/jasper/**', '**/configs/**'])
+            })
+        }
 //        doLast {
 //            def report = file("${reportsDir}/jacoco/test/jacocoTestReport.xml")
 //            logger.lifecycle("Checking coverage results: ${report}")
