--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -52,7 +52,7 @@ springfox:
 ##########################################
 rp:
   amqp:
-    addresses: amqp://${rp.amqp.user}:${rp.amqp.password}@${rp.amqp.host}:${rp.amqp.port}
+    addresses: amqp://${rp.amqp.user}:${rp.amqp.pass}@${rp.amqp.host}:${rp.amqp.port}
     api-address: http://${rp.amqp.apiuser}:${rp.amqp.apipass}@${rp.amqp.host}:${rp.amqp.apiport}/api
 
     host: rabbitmq
