fix postgres user

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -65,7 +65,7 @@ rp:
     apipass: rabbitmq
 
   db:
-    url: jdbc:postgresql://${rp.db.host}:${rp.db.port}/reportportal?user${rp.db.user}=&password=${rp.db.pass}
+    url: jdbc:postgresql://${rp.db.host}:${rp.db.port}/reportportal?user=${rp.db.user}&password=${rp.db.pass}
     host: postgres
     port: 5432
     user: rpuser
