--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -65,7 +65,8 @@ rp:
     apipass: rabbitmq
 
   db:
-    url: jdbc:postgresql://${rp.db.host}:${rp.db.port}/reportportal?user=${rp.db.user}&password=${rp.db.pass}
+    url: jdbc:postgresql://${rp.db.host}:${rp.db.port}/${rp.db.name}?user=${rp.db.user}&password=${rp.db.pass}
+    name: reportportal
     host: postgres
     port: 5432
     user: rpuser
