--- a/build.gradle
+++ b/build.gradle
@@ -115,7 +115,7 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:4.0.0'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile 'com.github.reportportal:commons-dao:2a3426e'
+        compile 'com.github.reportportal:commons-dao:199d53c'
         compile 'com.github.reportportal:commons-rules:4cd20af'
         compile 'com.github.reportportal:commons-model:9a630f5'
         compile('com.github.reportportal:commons:71d4aca')
@@ -202,7 +202,7 @@ dependencies {
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-all:2.0.2-beta'
+//    testCompile 'org.mockito:mockito-all:2.0.2-beta'
 
     testCompile 'com.jayway.jsonpath:json-path:2.2.0'
     //testCompile 'com.github.fakemongo:fongo:2.0.12'
