--- a/src/test/resources/test-application.properties
+++ b/src/test/resources/test-application.properties
@@ -11,6 +11,8 @@ generator.default.generator.name=org.jooq.util.DefaultGenerator
 generator.package.name=com.epam.ta.reportportal.store.jooq
 generator.directory=src/main/java
 generator.schema=public
-
 datastore.default.path=/data/storage
 datastore.type=seaweed
+embedded.datasource.dir=/embedded-postgres
+embedded.datasource.clean=true
+embedded.datasource.port=0
