--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=4.3.5
+version=4.3.6-SNAPSHOT
 description=EPAM Report portal. Main API Service
 logback=1.1.11
 dockerServerUrl=unix:///var/run/docker.sock
