--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -79,3 +79,9 @@ rp:
     enableByDefault: true
   plugins:
     path: /plugins
+  binarystore:
+    master:
+      host: seaweed-master
+      port: 9333
+    # could be one of [seaweed, filesystem]
+    type: seaweed
