Default datastore type has been changed

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -84,4 +84,4 @@ rp:
       host: seaweed-master
       port: 9333
     # could be one of [seaweed, filesystem]
-    type: seaweed
+    type: filesystem
