Plugins removing job has been implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,7 +46,8 @@ com.ta.reportportal.job.interrupt.broken.launches.cron=PT1H
 #CRON expression for project setting 'keep screenshots' as every 7 days
 #com.ta.reportportal.job.clean.screenshots.cron=P7D
 com.ta.reportportal.job.clean.screenshots.cron=PT1H
-com.ta.reportportal.job.load.plugins.cron=PT60S
+com.ta.reportportal.job.load.plugins.cron=PT1M
+com.ta.reportportal.job.clean.outdated.plugins.cron=PT1M
 #CRON expression for project setting 'keep logs' as every 14 days
 #com.ta.reportportal.job.clean.logs.cron=P14D
 com.ta.reportportal.job.clean.logs.cron=PT1H
