--- a/build.gradle
+++ b/build.gradle
@@ -115,7 +115,7 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:4.0.0'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile 'com.github.reportportal:commons-dao:f4ba513b'
+        compile 'com.github.reportportal:commons-dao:c4b1c3e9'
         compile 'com.github.reportportal:commons-rules:4cd20af'
         compile 'com.github.reportportal:commons-model:05abf033'
         compile('com.github.reportportal:commons:71d4aca')
@@ -262,10 +262,16 @@ build.dependsOn jacocoTestReport
 
 bootJar {
     archiveName = "${baseName}.${extension}"
+    mainClassName = "com.epam.ta.reportportal.core.configs.ReportPortalApp"
+    group = "com.epam.ta.reportportal.core.configs"
 }
 
 test {
-//    testLogging.showStandardStreams = true
+    testLogging.showStandardStreams = true
+
+    testLogging {
+        events "skipped", "failed"
+    }
 
     jacocoTestReport {
         reports {
