--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 
 dist: trusty
 sudo: required
-script: ./gradlew build --stacktrace --no-parallel
+script: ./gradlew build --stacktrace -Dorg.gradle.parallel=false
 
 env:
   global:
