--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script: ./gradlew build --info
 
 env:
   global:
-  - GRADLE_OPTS="-Xms128g -Xmx1g -Dorg.gradle.parallel=false"
+  - GRADLE_OPTS="-Xms128m -Xmx1g -Dorg.gradle.parallel=false"
 
 jdk:
   - oraclejdk8
