--- a/build.gradle
+++ b/build.gradle
@@ -268,7 +268,11 @@ bootJar {
 
 test {
 //    testLogging.showStandardStreams = true
+    options.fork = false
 
+    //enable incremental compilation
+    options.incremental = false
+    
     exclude "com.epam.ta.reportportal.ws.controller.suite"
     
     jacocoTestReport {
