--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 
 dist: trusty
 sudo: required
-script: ./gradlew build --info
+script: ./gradlew build --info --no-deamon --max-worker=1
 
 env:
   global:
