--- a/build.gradle
+++ b/build.gradle
@@ -115,7 +115,7 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:4.0.0'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile 'com.github.reportportal:commons-dao:e844d07'
+        compile 'com.github.reportportal:commons-dao:1764cdd'
         compile 'com.github.reportportal:commons-rules:4cd20af'
         compile 'com.github.reportportal:commons-model:05abf033'
         compile('com.github.reportportal:commons:71d4aca')
@@ -199,6 +199,8 @@ dependencies {
 
     compile "com.querydsl:querydsl-jpa:4.2.1"
 
+
+    testCompile group: 'org.flywaydb.flyway-test-extensions', name: 'flyway-spring-test', version: '5.2.1'
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'junit:junit:4.12'
