--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -66,6 +66,7 @@ rp.email.account=
 rp.email.password=
 #show sql statement
 logging.level.org.hibernate.SQL=info
+logging.level.org.hibernate.stat=DEBUG
 #show sql values
 #logging.level.org.hibernate.type.descriptor.sql=trace
 #logging.level.org.springframework.orm.jpa=debug
