--- a/build.gradle
+++ b/build.gradle
@@ -179,20 +179,22 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
     compile group: 'com.google.guava', name: 'guava', version: '25.1-jre'
 
-    api 'org.jacoco:org.jacoco.agent:0.7.7.201606060606'
+    api 'org.jacoco:org.jacoco.agent:0.8.3'
 
     compile "com.querydsl:querydsl-jpa:4.2.1"
 
+//  Tests
+    testCompile 'com.github.reportportal:agent-java-junit5:c6e131bdb2'
+    
+    testCompile('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'junit', module: 'junit'
+    }
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
+    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.1'
+    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.23.0'
+    
     testCompile group: 'org.flywaydb.flyway-test-extensions', name: 'flyway-spring-test', version: '5.2.1'
-    testCompile 'org.hamcrest:hamcrest-all:1.3'
-    testCompile 'junit:junit:4.12'
-
-    testCompile 'com.jayway.jsonpath:json-path:2.2.0'
-
-    testCompile 'org.apache.commons:commons-math3:3.6.1'
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
     testCompile 'com.bitmechanic:dumbster:1.9.0.2'
-    testCompile group: 'org.testcontainers', name: 'testcontainers', version: '1.10.6'
 }
 
 
@@ -242,8 +244,9 @@ bootJar {
 }
 
 test {
-//    testLogging.showStandardStreams = true
-    
+    useJUnitPlatform()
+    systemProperty 'junit.jupiter.extensions.autodetection.enabled', true
+    //    testLogging.showStandardStreams = true
     maxParallelForks = 1
 
     jacocoTestReport {
