--- a/build.gradle
+++ b/build.gradle
@@ -43,12 +43,12 @@ targetCompatibility = 1.8
 
 project.ext {
     limits = [
-            'instruction': 68,
-            'branch'     : 41,
-            'line'       : 67,
-            'complexity' : 49,
-            'method'     : 73,
-            'class'      : 87
+            'instruction': 60,
+//            'branch'     : 41,
+//            'line'       : 67,
+//            'complexity' : 49,
+//            'method'     : 73,
+//            'class'      : 87
     ]
     isDebugMode = System.getProperty("DEBUG", "false") == "true"
     releaseMode = project.hasProperty("releaseMode")
@@ -245,7 +245,7 @@ bootJar {
 
 test {
     useJUnitPlatform()
-    systemProperty 'junit.jupiter.extensions.autodetection.enabled', true
+//    systemProperty 'junit.jupiter.extensions.autodetection.enabled', true
     //    testLogging.showStandardStreams = true
     maxParallelForks = 1
 
@@ -263,52 +263,52 @@ test {
                                             '**/exception/**'])
             })
         }
-//        doLast {
-//            def report = file("${reportsDir}/jacoco/test/jacocoTestReport.xml")
-//            logger.lifecycle("Checking coverage results: ${report}")
-//
-//            def parser = new XmlParser()
-//            parser.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false)
-//            parser.setFeature("http://apache.org/xml/features/disallow-doctype-decl", false)
-//            def results = parser.parse(report)
-//
-//            def percentage = {
-//                def covered = it.'@covered' as Double
-//                def missed = it.'@missed' as Double
-//                ((covered / (covered + missed)) * 100).round(2)
-//            }
-//
-//            def counters = results.counter
-//            def metrics = [:]
-//            metrics << [
-//                    'instruction': percentage(counters.find { (it.'@type' == 'INSTRUCTION') }),
-//                    'branch'     : percentage(counters.find { (it.'@type' == 'BRANCH') }),
-//                    'line'       : percentage(counters.find { (it.'@type' == 'LINE') }),
-//                    'complexity' : percentage(counters.find { (it.'@type' == 'COMPLEXITY') }),
-//                    'method'     : percentage(counters.find { (it.'@type' == 'METHOD') }),
-//                    'class'      : percentage(counters.find { (it.'@type' == 'CLASS') })
-//            ]
-//
-//
-//            def failures = []
-//            metrics.each {
-//                def limit = limits[it.key]
-//                if (it.value < limit) {
-//                    failures.add("- ${it.key} coverage rate is: ${it.value}%, minimum is ${limit}%")
-//                }
-//            }
-//
-//            if (failures) {
-//                logger.quiet("------------------ Code Coverage Failed -----------------------")
-//                failures.each {
-//                    logger.quiet(it)
-//                }
-//                logger.quiet("---------------------------------------------------------------")
-//                throw new GradleException("Code coverage failed")
-//            } else {
-//                logger.quiet("Passed Code Coverage Checks")
-//            }
-//        }
+        doLast {
+            def report = file("${reportsDir}/jacoco/test/jacocoTestReport.xml")
+            logger.lifecycle("Checking coverage results: ${report}")
+
+            def parser = new XmlParser()
+            parser.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false)
+            parser.setFeature("http://apache.org/xml/features/disallow-doctype-decl", false)
+            def results = parser.parse(report)
+
+            def percentage = {
+                def covered = it.'@covered' as Double
+                def missed = it.'@missed' as Double
+                ((covered / (covered + missed)) * 100).round(2)
+            }
+
+            def counters = results.counter
+            def metrics = [:]
+            metrics << [
+                    'instruction': percentage(counters.find { (it.'@type' == 'INSTRUCTION') }),
+                    'branch'     : percentage(counters.find { (it.'@type' == 'BRANCH') }),
+                    'line'       : percentage(counters.find { (it.'@type' == 'LINE') }),
+                    'complexity' : percentage(counters.find { (it.'@type' == 'COMPLEXITY') }),
+                    'method'     : percentage(counters.find { (it.'@type' == 'METHOD') }),
+                    'class'      : percentage(counters.find { (it.'@type' == 'CLASS') })
+            ]
+
+
+            def failures = []
+            metrics.each {
+                def limit = limits[it.key]
+                if (it.value < limit) {
+                    failures.add("- ${it.key} coverage rate is: ${it.value}%, minimum is ${limit}%")
+                }
+            }
+
+            if (failures) {
+                logger.quiet("------------------ Code Coverage Failed -----------------------")
+                failures.each {
+                    logger.quiet(it)
+                }
+                logger.quiet("---------------------------------------------------------------")
+                throw new GradleException("Code coverage failed")
+            } else {
+                logger.quiet("Passed Code Coverage Checks")
+            }
+        }
     }
 
     if (System.env.TRAVIS == 'true') {
