--- a/build.gradle
+++ b/build.gradle
@@ -248,17 +248,18 @@ private static void copyFromUrl(GString localScriptPath, String scriptUrl) {
     if (file.exists()) {
         file.delete()
     }
+    file.getParentFile().mkdirs()
     file.createNewFile()
     file << new URL(scriptUrl).openStream()
 }
 
 task copyScripts {
     def initScriptPath = "${projectDir}/src/test/resources/db/migration/V001__initialize_schema.sql"
-    def initScriptUrl = "https://raw.githubusercontent.com/reportportal/migrations/copy-scripts-from-github/migrations/1_initialize_schema.up.sql"
+    def initScriptUrl = "https://raw.githubusercontent.com/reportportal/migrations/master/migrations/1_initialize_schema.up.sql"
     copyFromUrl(initScriptPath, initScriptUrl)
 
     def dataScriptPath = "${projectDir}/src/test/resources/db/migration/V002__default_data.sql"
-    def dataScriptUrl = "https://raw.githubusercontent.com/reportportal/migrations/copy-scripts-from-github/migrations/3_default_data.up.sql"
+    def dataScriptUrl = "https://raw.githubusercontent.com/reportportal/migrations/master/migrations/3_default_data.up.sql"
     copyFromUrl(dataScriptPath, dataScriptUrl)
 }
 
