--- a/src/test/resources/test-application.properties
+++ b/src/test/resources/test-application.properties
@@ -15,4 +15,4 @@ embedded.datasource.dir=/embedded-postgres
 embedded.datasource.clean=true
 embedded.datasource.port=0
 rp.binarystore.type=filesystem
-rp.binarystore.path=${user.dir}/data/storage
+rp.binarystore.path=${java.io.tmpdir}
