Update project handlers tests

--- a/build.gradle
+++ b/build.gradle
@@ -299,7 +299,9 @@ test {
                                             '**/jasper/**',
                                             '**/configs/**',
                                             '**/demodata/**',
-                                            '**/exception/**'])
+                                            '**/exception/**',
+                                            '**/analyzer/model/**'
+                ])
             })
         }
         doLast {
