--- a/build.gradle
+++ b/build.gradle
@@ -44,13 +44,12 @@ targetCompatibility = 1.8
 
 project.ext {
     limits = [
-            'instruction': 50
-//            'instruction': 68,
-//            'branch'     : 41,
-//            'line'       : 67,
-//            'complexity' : 49,
-//            'method'     : 73,
-//            'class'      : 87
+            'instruction': 70,
+            'branch'     : 55,
+            'line'       : 75,
+            'complexity' : 60,
+            'method'     : 65,
+            'class'      : 90
     ]
     isDebugMode = System.getProperty("DEBUG", "false") == "true"
     releaseMode = project.hasProperty("releaseMode")
