--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: java
 
 dist: trusty
 sudo: required
+before_install:
+  - sudo apt-get install -y fonts-noto
 script: ./gradlew build --info
 
 env:
