--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: java
 
 dist: trusty
 sudo: required
+before_install:
+  - sudo apt-get install -y fonts-noto
 script: ./gradlew build --full-stacktrace
 
 env:
@@ -16,8 +18,8 @@ notifications:
 
 cache:
   directories:
-  - $HOME/.m2
-  - $HOME/.gradle
+    - $HOME/.m2
+    - $HOME/.gradle
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
