--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ security.oauth2.client.accessTokenUri=${rp.uat.serviceUrl}/sso/oauth/token
 security.oauth2.client.userAuthorizationUri=${rp.uat.serviceUrl}/sso/oauth/authorize
 security.oauth2.client.clientId=internal
 security.oauth2.client.clientSecret=internal_man
+management.endpoints.web.base-path=/composite
 #security.sessions=never
 #security.basic.enabled=false
 management.server.servlet.context-path=/admin
