--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,13 +15,12 @@
 #
 server.port=8585
 server.servlet.context-path=/api/v1
-rp.uat.serviceUrl=http://localhost:9999
 security.oauth2.resource.userInfoUri=${rp.uat.serviceUrl}/sso/me
 security.oauth2.client.accessTokenUri=${rp.uat.serviceUrl}/sso/oauth/token
 security.oauth2.client.userAuthorizationUri=${rp.uat.serviceUrl}/sso/oauth/authorize
 security.oauth2.client.clientId=internal
 security.oauth2.client.clientSecret=internal_man
-management.endpoints.web.base-path=/composite
+management.endpoints.web.base-path=/
 #security.sessions=never
 #security.basic.enabled=false
 management.server.servlet.context-path=/admin
