--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@
 #
 server.port=8585
 server.servlet.context-path=/api/v1
+rp.uat.serviceUrl=http://localhost:9999
 security.oauth2.resource.userInfoUri=${rp.uat.serviceUrl}/sso/me
 security.oauth2.client.accessTokenUri=${rp.uat.serviceUrl}/sso/oauth/token
 security.oauth2.client.userAuthorizationUri=${rp.uat.serviceUrl}/sso/oauth/authorize
@@ -24,7 +25,6 @@ management.endpoints.web.base-path=/
 #security.sessions=never
 #security.basic.enabled=false
 management.server.servlet.context-path=/admin
-
 # Cache configs
 rp.cache.project.size=1000
 rp.cache.project.expiration=1
