--- a/docker/Dockerfile-perf
+++ b/docker/Dockerfile-perf
@@ -4,14 +4,19 @@ LABEL maintainer="Andrei Varabyeu <andrei_varabyeu@epam.com>"
 LABEL version="@version@"
 LABEL description="@description@"
 
-ENV JAVA_OPTS="-Xmx1g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp -Djava.security.egd=file:/dev/./urandom"
-ENV JAVA_APP=/app.jar
+ENV APP_FILE service-api-4.3.5
+ENV APP_DOWNLOAD_URL https://dl.bintray.com/epam/reportportal/com/epam/reportportal/service-api/4.3.5/$APP_FILE.jar
+ENV JAVA_OPTS="-Xmx1g -Djava.security.egd=file:/dev/./urandom"
 ENV JOLOKIA_AGENT="-javaagent:/opt/java/jolokia-jvm-1.6.0-agent.jar=port=7779,host=localhost"
+ENV JAVA_APP=/app.jar
 
 RUN apt-get update && \
-    apt-get install -y wget && \
-    apt-get install -y fonts-noto net-tools && \
+    apt-get install -y fonts-noto && \
     rm -rf /var/lib/apt/lists/*
+
+RUN apt-get update \
+  && apt-get install -y wget \
+  && rm -rf /var/lib/apt/lists/*
 
 # Installing Java Jolokia
 RUN  mkdir -p /opt/java && cd /opt/java \
@@ -29,9 +34,7 @@ exec java $JOLOKIA_AGENT $JAVA_OPTS -jar $JAVA_APP' > /start.sh && chmod +x /sta
 
 VOLUME /tmp
 
-ADD @name@-@version@.jar app.jar
-RUN sh -c 'touch /app.jar'
+RUN wget -O $JAVA_APP $APP_DOWNLOAD_URL
 
 EXPOSE 8080
-
 ENTRYPOINT ["/start.sh"]
