Refactor plugin and integration architecture

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -84,7 +84,7 @@ rp:
   analytics:
     enableByDefault: true
   plugins:
-    path: /plugins
+    path: /Users/pavel_bortnik/IdeaProjects/service-api/plugins
   binarystore:
     master:
       host: seaweed-master
