--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -88,7 +88,7 @@ rp:
   analytics:
     enableByDefault: true
   plugins:
-    path: /Users/pavel_bortnik/IdeaProjects/service-api/plugins
+    path: /plugins
   binarystore:
     master:
       host: seaweed-master
