--- a/src/main/resources/datastore.properties
+++ b/src/main/resources/datastore.properties
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-datastore.default.path=${rp.binarystore.path:/Users/pavel_bortnik/IdeaProjects/service-api/data/storage}
+datastore.default.path=${rp.binarystore.path:/data/storage}
 datastore.seaweed.master.host=${rp.binarystore.master.host:localhost}
 datastore.seaweed.master.port=${rp.binarystore.master.port:9333}
 # could be one of [seaweed, filesystem]
