--- a/build.gradle
+++ b/build.gradle
@@ -99,7 +99,7 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:4.0.0'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile 'com.github.reportportal:commons-dao:750029ac'
+        compile 'com.github.reportportal:commons-dao:8497b4'
         compile 'com.github.reportportal:commons-rules:574fb3a'
         compile 'com.github.reportportal:commons-model:d1a88af8'
         compile('com.github.reportportal:commons:71d4aca')
