--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,7 @@ com.ta.reportportal.job.clean.logs.cron=PT1H
 com.ta.reportportal.job.clean.logs.timeout=300
 com.ta.reportportal.job.clean.launches.cron=PT1H
 com.ta.reportportal.job.clean.launches.timeout=300
+com.ta.reportportal.job.clean.bids.cron=PT1H
 #Expire account after X days
 rp.auth.expire.account.after=5
 ## EMail Server configuration (temporary solution)
