add Rabbit async processing for log reporting

--- a/build.gradle
+++ b/build.gradle
@@ -99,9 +99,9 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:4.0.0'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile 'com.github.reportportal:commons-dao:8497b4'
+        compile 'com.github.reportportal:commons-dao:a1c89cd'
         compile 'com.github.reportportal:commons-rules:574fb3a'
-        compile 'com.github.reportportal:commons-model:d1a88af8'
+        compile 'com.github.reportportal:commons-model:0727ce'
         compile('com.github.reportportal:commons:71d4aca')
         compile('com.github.reportportal:plugin-api:30f47d49')
     }
