Leave only one endpoint for test integration connection Security update for test and execution of integrations

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -30,8 +30,8 @@ spring:
 
 logging:
   level:
-    org.hibernate: debug
-    org.hibernate.stat: debug
+    org.hibernate: info
+    org.hibernate.stat: info
     org.springframework.security: info
     org.springframework.web.bind: fatal
     root: info
