Add uuid to launch and test item resources

--- a/build.gradle
+++ b/build.gradle
@@ -100,7 +100,7 @@ dependencies {
     } else {
         compile 'com.github.reportportal:commons-dao:0af035f'
         compile 'com.github.reportportal:commons-rules:574fb3a'
-        compile 'com.github.reportportal:commons-model:4b87587'
+        compile 'com.github.reportportal:commons-model:cd451832'
         compile('com.github.reportportal:commons:71d4aca')
         compile('com.github.reportportal:plugin-api:30f47d49')
     }
@@ -204,6 +204,22 @@ dependencies {
 task wrapper(type: Wrapper) {
     gradleVersion = '4.7'
 }
+
+/*
+ * Copyright 2019 EPAM Systems
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 
 //Start section for external jacoco test report
 tasks.withType(JavaCompile) {
