--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -61,6 +61,10 @@ rp:
   jwt:
     signing-key: 123
 
+  header:
+    cache:
+      photo: 86400
+
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driverClassName: org.postgresql.Driver
